# HGSS_SafariZoneEditor

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.LGPL  LICENSE.MIT  README.fr.md  README.md
assets/: resource.rc
assets/maps/Desert/: m_saf12_00_00c.dae
assets/maps/Forest/: m_saf07_00_00c.dae
assets/maps/Marshland/: m_saf09_00_00c.dae
assets/maps/Meadow/: m_saf02_00_00c.dae
assets/maps/Mountain/: m_saf11_00_00c.dae
assets/maps/Peak/: m_saf04_00_00c.dae
assets/maps/Plains/: m_saf01_00_00c.dae
assets/maps/Rocky Beach/: m_saf05_00_00c.dae
assets/maps/Savannah/: m_saf03_00_00c.dae
assets/maps/Swamp/: m_saf08_00_00c.dae
assets/maps/Wasteland/: m_saf10_00_00c.dae
assets/maps/Wetland/: m_saf06_00_00c.dae
assets/objects/models/Big Rock/: saf_ro02.dae
assets/objects/models/Branches/: saf_to03.dae
assets/objects/models/Fountain/: saf_wo02.dae
assets/objects/models/Mossy Rock/: saf_ro03.dae
assets/objects/models/Puddle/: saf_wo01.dae
assets/objects/models/Red Flower/: saf_go02.dae
assets/objects/models/Shrubbery/: saf_go01.dae
assets/objects/models/Small Rock/: saf_ro01.dae
assets/objects/models/Stump/: saf_to02.dae
assets/objects/models/Tree/: saf_to01.dae
assets/objects/models/Water Hole/: saf_wo03.dae
assets/objects/models/White Flower/: saf_go03.dae
assets/shaders/: foutline.glsl  fshader.glsl  vshader.glsl
data/: locale.json  map_data.json  object_data.json  poke_data.json  slot_data.json
include/: about_message_box.hpp  area_view.hpp  block_popup.hpp  day_counters.hpp  file_menu.hpp  geometry_engine.hpp  geometryengine.h  hover_label.hpp  lang_menu.hpp  locale_manager.hpp  main_window.hpp  mesh.hpp  model.hpp  options_menu.hpp  utils.hpp
include/gui/: area_item.hpp  area_label.hpp  area_selector.hpp  area_view.hpp  block_popup.hpp  day_counters.hpp  file_menu.hpp  hover_label.hpp  main_window.hpp  object_item.hpp  object_view.hpp  options_menu.hpp  qselectitem.hpp  safari_layout_view.hpp  widget_3dview.hpp
include/gui/main/: area_item.hpp  area_selector.hpp  area_view.hpp  day_counter_edit.hpp  day_counters.hpp  safari_layout.hpp
include/gui/main/area_editor/: object_item.hpp  object_view.hpp  widget_3dview.hpp
include/gui/main/safari_layout/: area_label.hpp  block_popup.hpp
include/gui/menu/: about_message_box.hpp  file_menu.hpp  lang_menu.hpp  options_menu.hpp
include/manager/: config_manager.hpp  locale_manager.hpp  object_data_manager.hpp  save_data_manager.hpp  save_file_manager.hpp  slot_manager.hpp
include/render/: mesh.hpp  model.hpp
src/: CMakeLists.txt  about_message_box.cpp  area_view.cpp  block_popup.cpp  day_counters.cpp  file_menu.cpp  geometry_engine.cpp  geometryengine.cpp  hover_label.cpp  lang_menu.cpp  main.cpp  main_window.cpp  mesh.cpp  model.cpp  options_menu.cpp
src/gui/: CMakeLists.txt  about_message_box.cpp  area_item.cpp  area_label.cpp  area_selector.cpp  area_view.cpp  block_popup.cpp  day_counters.cpp  file_menu.cpp  hover_label.cpp  lang_menu.cpp  main_window.cpp  object_item.cpp  object_view.cpp  options_menu.cpp  safari_layout_view.cpp  widget_3dview.cpp
src/gui/main/: CMakeLists.txt  area_item.cpp  area_selector.cpp  area_view.cpp  day_counters.cpp  safari_layout.cpp
src/gui/main/area_editor/: CMakeLists.txt  object_item.cpp  object_view.cpp  widget_3dview.cpp
src/gui/main/safari_layout/: CMakeLists.txt  area_label.cpp  block_popup.cpp
src/gui/menu/: CMakeLists.txt  about_message_box.cpp  file_menu.cpp  lang_menu.cpp  options_menu.cpp
src/render/: CMakeLists.txt  mesh.cpp  model.cpp
